13_layer-apply-components

--- a/public/styles.css
+++ b/public/styles.css
@@ -640,6 +640,14 @@ a {
   }
 }
 
+.purple-button {
+  --tw-bg-opacity: 1;
+  background-color: rgba(99, 102, 241, var(--tw-bg-opacity));
+  padding: 1rem;
+  --tw-text-opacity: 1;
+  color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
